# ai-video-intel

./: .editorconfig  .env.example  .gitignore  IMPLEMENTATION.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile.api  Dockerfile.worker  README.md  alembic.ini  pyproject.toml  pytest.ini
backend/alembic/: README.md  env.py
backend/alembic/versions/: 0384ae4e26a2_initial_schema.py  de265d0955f9_add_index_video_assets_status.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  assets.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/integrations/: storage.py
backend/app/models/: __init__.py  enums.py  models.py
backend/app/schemas/: __init__.py  assets.py
backend/app/services/: assets.py  ffmpeg.py  normalization.py  step_runner.py  validation.py
backend/app/workers/: celery_app.py  tasks.py
backend/tests/: conftest.py  test_ffmpeg.py  test_normalization.py  test_step_runner.py  test_validation.py
frontend/: README.md  index.html  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
